# diffgetr

./: .gitignore  CLAUDE.md  PYPI_SETUP.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: main.yml  pr.yml
diffgetr/: diff_get.py
diffgetr.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_diff_get.py
