[project]
name = "diffgetr"
version = "0.1.0"
description = "A Python library for comparing nested data structures with detailed diff reporting."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "deepdiff>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/diffgetr"

[tool.setuptools]
packages = ["diffgetr"]

[tool.setuptools.package-data]
diffgetr = ["*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
diffgetr = "diffgetr.diff_get:main"
